# autoflow-desktop

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
autoflow/: __init__.py  autostart.py  hotkeys.py  input_backend.py  main.py  recorder.py  settings.py
autoflow/core/: __init__.py  advanced_schedule.py  clipboard.py  conditions.py  data_sources.py  executor.py  export_python.py  global_vars.py  history.py  ocr.py  registry.py  safe_eval.py  scheduler.py  templates.py  variables.py  vision.py  windows_backend.py
autoflow/gui/: __init__.py  about_dialog.py  action_editor.py  action_palette.py  capture_dialog.py  child_editor.py  command_palette.py  concrete_widgets.py  coordinate_picker.py  dashboard.py  history_dialog.py  icons.py  log_console.py  main_window.py  node_view.py  onboarding.py  param_panel.py  schedule_panel.py  sequence_editor.py  settings_dialog.py  template_gallery.py  theme.py  triggers_dialog.py  update_dialog.py  worker.py  workflow_list.py
autoflow/models/: __init__.py  workflow.py
autoflow/persistence/: __init__.py  profiles.py  store.py
autoflow/services/: __init__.py  apps.py  email_smtp.py  http_client.py  keys.py  run_queue.py  secrets.py  system_control.py  test_action.py  tts.py  ui_automation.py  updater.py  version.py  windows_list.py
autoflow/ui/: __init__.py  branding.py
autoflow/utils/: __init__.py  logging_setup.py
docs/images/: README.md
examples/: anti_veille_bloc_notes.json  cmder_continue_auto.json
examples/templates/: anti_veille_bloc_notes.json  anti_veille_bouger_la_souris_discrètement.json  anti_veille_terminal_cmder.json  anti_veille_touche_neutre_f15.json  attendre_une_fenêtre_puis_agir.json  attendre_une_image_puis_cliquer.json  auto_clic_configurable.json  avancer_les_diapositives.json  build_relancer_un_script_planifié.json  capture_d_écran_planifiée.json  cmder_relancer_continue.json  commande_média_lecture_pause.json  fermer_les_distractions.json  (+5 more)
packaging/: autoflow.spec  build.ps1  installer.iss
scripts/: _gen_templates.py  capture_screens.py  make_icon.py
tests/: conftest.py  test_actions.py  test_advanced_schedule.py  test_autostart.py  test_executor.py  test_export_python.py  test_flow.py  test_gui.py  test_gui_v3.py  test_history.py  test_lot2_actions.py  test_lot2_data.py  test_lot2_gui.py  test_lot2_robust.py  test_lot2_serialization.py  test_lot2_triggers.py  test_persistence.py  test_policy.py  test_profiles.py  test_registry.py  test_scheduler.py  test_services.py  test_settings.py  test_summaries_compat.py  test_system_actions.py  test_templates.py  test_theme_v4.py  test_updater.py  test_vision_ocr.py  test_windows_backend.py
(+47 files in other folders)
