[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoflow-desktop"
version = "0.1.0"
description = "AutoFlow — outil visuel d'automatisation du PC (clics, frappes, séquences planifiées)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoFlow" }]
keywords = ["automation", "gui", "pyside6", "rpa", "windows"]
dependencies = [
    "PySide6>=6.7",
    "pyautogui>=0.9.54",
    "PyGetWindow>=0.0.9",
    "pynput>=1.7.6",
    "platformdirs>=4.0",
    "APScheduler>=3.10",
    "opencv-python>=4.8",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-qt>=4.4"]
packaging = ["pyinstaller>=6.0"]

[project.scripts]
autoflow = "autoflow.main:main"

[tool.setuptools.packages.find]
include = ["autoflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["autoflow/core"]
